# onyx

./: .eslintrc.js  Cargo.toml  README.md  SECURITY.md  mdx-components.tsx  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  site.ts  tailwind.config.ts  tsconfig.json  vercel.json
app/: ZetaChainContext.tsx  chatactions-supa.tsx  config.ts  globals.css  index.tsx  layout.tsx  page.tsx  providers.tsx  sitemap.ts  templayout.tsx  three.d.ts
components/: animated-infographic.tsx  auth-button.tsx  cookie-button.tsx  cta.tsx  email-template.tsx  extractdatafromfile.tsx  extractdatatest.tsx  feature-prism.tsx  features.tsx  google-auth-button.tsx  icons.tsx  main-nav.tsx  meeting-scheduler.tsx  mobile-nav.tsx  onboarding-progress.tsx  one-tap.tsx  onyxocr.tsx  prism-container.tsx  process-diagram.tsx  react-query-client-provider.tsx  schedule-cta.tsx  schedule-form.tsx  sidebar-nav.tsx  sign-out.tsx  site-footer.tsx  site-header.tsx  tesseractgolemocr.tsx  transaction.tsx  transactions.tsx  transfer.tsx  whyonyx.tsx  whyonyxwrapper.tsx  whyresendit.tsx  whyresenditwrapper.tsx
config/: config.tsx  docs.ts  index.tsx  site.ts
context/: index.tsx
hooks/: use-auth.ts
lib/: calendar-service.ts  db-actions.ts  encryption.ts  errors.ts  ethers.ts  font.tsx  form.tsx  generate-embeddings.ts  google-auth.ts  hexToBech32Address.ts  meeting-actions.ts  supabase.ts  utils.ts  vector-search.ts
public/: manifest.json  sw.js
queries/: chat-by-id.tsx  country-by-id.tsx  message-by-id.tsx
styles/: globals.css
(+220 files in other folders)
